# zesty-determination

./: .gitignore  .vercelignore  AI_Tutor_Platform_Documentation.tex  DEPLOYMENT_GUIDE 2.md  DEPLOYMENT_GUIDE.md  GUIDA_SETUP_LOCALE.md  PROGRESS.md  QUICK_START_DEPLOYMENT.md  RAILWAY_MIGRATIONS.md  README.md  RENDER_ENV.md  STATO_DEPLOYMENT.md  VERCEL_ENV.md  VERCEL_SETUP.md  business_plan_mvp.xlsx  railway.json
backend/: .deploy_trigger  .pre-commit-config.yaml  Dockerfile  alembic.ini  create_test_lessons.py  pyproject.toml  render.yaml  requirements.txt  restart_server.sh  start.sh  test_setup.py
backend/app/: __init__.py  main.py
backend/app/core/: celery_app.py  config.py  db.py  dependencies.py  emailer.py  security.py  storage.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 333b78b976da_add_gamification_system.py  4c1667f0b25c_initial_schema_with_correct_.py
backend/app/models/: __init__.py  assignment.py  availability.py  base.py  feedback.py  file.py  lesson.py  parent_profile.py  payment.py  report.py  student_parent.py  student_profile.py  tutor_profile.py  user.py
backend/app/routers/: admin.py  assignments.py  auth.py  availability.py  cleanup.py  feedback.py  files.py  gamification.py  health.py  lessons.py  parent.py  payments.py  reports.py  tutor.py  users.py  video.py
backend/app/schemas/: admin.py  assignment.py  auth.py  lesson.py  parent.py  payment.py  report.py
backend/app/services/: admin.py  agora.py  ai.py  assignments.py  auth.py  auth_service.py  availability.py  gamification.py  lessons.py  notifications.py  parent.py  payments.py  reports.py
backend/scripts/: check_user_role.py  cleanup_database.py  cleanup_lessons.py  create_admin_railway.py  create_tutor_giacomo.py  create_tutor_railway.py  delete_all_users.py  delete_user.py  delete_users_via_api.py  list_users.py  run_migrations.py  update_password_railway.py  update_user_role.py
backend/templates/: lesson_notes.html  monthly_report.html
backend/templates/email/: base.html  lesson_confirmed.html  lesson_reminder.html  payment_receipt.html  report_published.html  welcome.html
backend/tests/: conftest.py
backend/tests/integration/: test_auth_endpoints.py  test_lessons_endpoints.py
backend/tests/unit/: test_auth.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
ops/: docker-compose.dev.yml
(+48 files in other folders)
